--- a/Workspace/QuicksandEngine/packages.config
+++ b/Workspace/QuicksandEngine/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Assimp" version="3.0.0" targetFramework="Native" />
+  <package id="Assimp.redist" version="3.0.0" targetFramework="Native" />
   <package id="boost" version="1.55.0.16" targetFramework="Native" />
   <package id="DevIL" version="1.7.8" targetFramework="Native" />
   <package id="DevIL.redist" version="1.7.8" targetFramework="Native" />
