--- a/Workspace/QuicksandEngine/packages.config
+++ b/Workspace/QuicksandEngine/packages.config
@@ -13,6 +13,8 @@
   <package id="NVorbis" version="0.8.3.0" targetFramework="Native" />
   <package id="rxd_glew" version="1.10.0.1" targetFramework="Native" />
   <package id="rxd_glew.redist" version="1.10.0.1" targetFramework="Native" />
+  <package id="sfml" version="2.1.0.0" targetFramework="Native" />
+  <package id="sfml.redist" version="2.1.0.0" targetFramework="Native" />
   <package id="tinyxml2" version="2.1.0" targetFramework="Native" />
   <package id="tinyxml2.redist" version="2.1.0" targetFramework="Native" />
   <package id="zlib" version="1.2.8.6" targetFramework="Native" />
